--- a/TeacherApp/templates/displayinternal.html
+++ b/TeacherApp/templates/displayinternal.html
@@ -6,9 +6,9 @@
 
     <!-- Filter + PDF button row using flex -->
     <form method="get" class="mb-3">
-        <div class="justify-content-between align-items-center " style=" display:flex; gap:30px;">
+        <div class="justify-content-between align-items-center" style="display:flex; gap:30px;">
 
-            <!-- Student Filter on left -->
+            <!-- Subject Filter on left -->
             <div style="flex: 1; max-width: 1000px;">
                 <select name="subject" class="form-select" onchange="this.form.submit()">
                     <option value="">Select Subject</option>
@@ -64,7 +64,8 @@
                             </a>
                         </td>
                         <td>
-                            <a href="{% url 'Deleteinternal' i_id=i.id %}">
+                            <a href="{% url 'Deleteinternal' i_id=i.id %}"
+                               onclick="return confirm('Are you sure you want to delete this internal mark?');">
                                 <button class="btn btn-danger btn-sm px-3">Delete</button>
                             </a>
                         </td>
