commit 30 (removed MessageStudentList))

--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -148,7 +148,7 @@
                     <i data-feather="message-circle"></i>
                 </li>
                 <li class="pc-item">
-                    <a href="{% url 'MessengerStudentList' %}" class="pc-link">
+                    <a href="{% url 'MessengerShortcut' %}" class="pc-link">
                         <span class="pc-micon"><i data-feather="send"></i></span>
                         <span class="pc-mtext">Message</span>
                     </a>
@@ -448,7 +448,7 @@
                 </div>
 
                 <div class="col-span-12 xl:col-span-3 md:col-span-6">
-                    <a href="{% url 'MessengerStudentList' %}">
+                    <a href="{% url 'MessengerShortcut' %}">
                         <div class="card quick-access-card">
                             <div class="card-body text-center">
                                 <div class="p-4 rounded-full bg-teal-100 text-teal-500 inline-block mb-3">
