commit 37 (alignments of teacherapp corrected)

--- a/TeacherApp/templates/addinternal.html
+++ b/TeacherApp/templates/addinternal.html
@@ -7,7 +7,8 @@
         <div class="col-md-6">
 
             <div class="card shadow-lg p-4" style="border:1px solid lightgrey; border-radius:10px;">
-                <h3 class="text-center mb-4" style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Add Internal Marks</h3>
+                <h3 class="text-center mb-4"
+                    style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Add Internal Marks</h3>
 
                 <form method="POST" action="{% url 'Saveinternal' %}">
                     {% csrf_token %}
@@ -17,7 +18,7 @@
                         <select name="student" class="form-control" required>
                             <option>-- Select Student --</option>
                             {% for i in student %}
-                                <option value="{{ i.id }}">{{i.Student_name}}({{i.Student_rollno}})</option>
+                            <option value="{{ i.id }}">{{i.Student_name}}({{i.Student_rollno}})</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -25,25 +26,29 @@
                     <div class="mb-3">
                         <label class="form-label">Select Subject</label>
                         <select name="subject" class="form-control" required>
-                            <option >-- Select Subject --</option>
+                            <option>-- Select Subject --</option>
                             {% for i in subject %}
-                                <option value="{{ i.id }}">{{i.Subject_name}}({{i.Subject_code}})</option>
+                            <option value="{{ i.id }}">{{i.Subject_name}}({{i.Subject_code}})</option>
                             {% endfor %}
                         </select>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Internal Mark Obtained</label>
-                        <input type="text" name="internalmark" min="0" placeholder="Enter marks obtained" class="form-control" required>
+                        <input type="text" name="internalmark" min="0" placeholder="Enter marks obtained"
+                               class="form-control" required>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Total Mark</label>
-                        <input type="text" name="totalmark" min="1" placeholder="Enter total marks" class="form-control" required>
+                        <input type="text" name="totalmark" min="1" placeholder="Enter total marks" class="form-control"
+                               required>
                     </div>
 
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Upload Internal</button>
+                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Upload
+                            Internal
+                        </button>
                     </div>
 
                 </form>
