--- a/TeacherApp/templates/addsubject.html
+++ b/TeacherApp/templates/addsubject.html
@@ -1,4 +1,3 @@
-
 {% extends 'index.html' %}
 {% load static %}
 {% block content %}
@@ -6,7 +5,8 @@
 <div class="col-md-6">
 
     <div class="card shadow-lg p-4">
-        <h3 class="text-center mb-4" style="color:darkblue; font-weight:bold; font-size:30px; font-family:Arial;">Add Subject</h3>
+        <h3 class="text-center mb-4" style="color:darkblue; font-weight:bold; font-size:30px; font-family:Arial;">Add
+            Subject</h3>
 
         <form method="POST" action="{% url 'savesubject' %}">
             {% csrf_token %}
@@ -30,32 +30,31 @@
                 <label class="form-label">Semester</label>
                 <select name="subject_sem" class="form-control">
                     <option>-- Select Semester --</option>
-                    <option >S1</option>
-                    <option >S2</option>
-                    <option >S3</option>
-                    <option >S4</option>
-                    <option >S5</option>
-                    <option >S6</option>
+                    <option>S1</option>
+                    <option>S2</option>
+                    <option>S3</option>
+                    <option>S4</option>
+                    <option>S5</option>
+                    <option>S6</option>
                 </select>
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Department</label>
                 <select name="subject_dep" class="form-control">
-                    <option >-- Select Department --</option>
-                    <option >CSE</option>
-                    <option >EC</option>
-                    <option >EEE</option>
-                    <option >CE</option>
+                    <option>-- Select Department --</option>
+                    <option>CSE</option>
+                    <option>EC</option>
+                    <option>EEE</option>
+                    <option>CE</option>
                 </select>
             </div>
 
 
-
             <div class="text-center">
-            <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
-                Save Subject
-            </button>
+                <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
+                    Save Subject
+                </button>
             </div>
 
 
@@ -63,7 +62,6 @@
     </div>
 
 </div>
-
 
 
 {% endblock %}
