--- a/TeacherApp/templates/editinternal.html
+++ b/TeacherApp/templates/editinternal.html
@@ -7,17 +7,20 @@
         <div class="col-md-6">
 
             <div class="card shadow-lg p-4" style="border:1px solid lightgrey; border-radius:10px;">
-                <h3 class="text-center mb-4" style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Edit Internal Marks</h3>
+                <h3 class="text-center mb-4"
+                    style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Edit Internal
+                    Marks</h3>
 
                 <form method="POST" action="{% url 'Updateinternal' i_id=internal.id %}">
                     {% csrf_token %}
 
                     <div class="mb-3">
                         <label class="form-label">Select Student</label>
-                         <select name="student" class="form-control" required>
-                        {% for i in student %}
-                         <option value="{{ i.id }}" {% if i.id == internal.Student.id %}selected{% endif %}> {{ i.Student_name }} ({{ i.Student_rollno }})</option>
-                        {% endfor %}
+                        <select name="student" class="form-control" required>
+                            {% for i in student %}
+                            <option value="{{ i.id }}" {% if i.id == internal.Student.id %}selected{% endif %}> {{ i.Student_name }} ({{ i.Student_rollno }})
+                            </option>
+                            {% endfor %}
                         </select>
                     </div>
 
@@ -25,23 +28,29 @@
                         <label class="form-label">Select Subject</label>
                         <select name="subject" class="form-control" required>
                             {% for i in subject %}
-                                <option value="{{ i.id }}" {% if i.id == internal.Subject.id %}selected{% endif %}>{{i.Subject_name}}({{i.Subject_code}})</option>
+                            <option value="{{ i.id }}" {% if i.id == internal.Subject.id %}selected{% endif %}>
+                                {{i.Subject_name}}({{i.Subject_code}})
+                            </option>
                             {% endfor %}
                         </select>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Internal Mark Obtained</label>
-                        <input type="number" name="internalmark" min="0" placeholder="Enter marks obtained" class="form-control" required value="{{internal.Internalmark}}">
+                        <input type="number" name="internalmark" min="0" placeholder="Enter marks obtained"
+                               class="form-control" required value="{{internal.Internalmark}}">
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label">Total Mark</label>
-                        <input type="number" name="totalmark" min="1" placeholder="Enter total marks" class="form-control" required value="{{internal.Totalmark}}">
+                        <input type="number" name="totalmark" min="1" placeholder="Enter total marks"
+                               class="form-control" required value="{{internal.Totalmark}}">
                     </div>
 
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Update Internal</button>
+                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Update
+                            Internal
+                        </button>
                     </div>
 
                 </form>
