--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -1,91 +1,98 @@
-
 {% extends 'index.html' %}
 {% load static %}
 {% block content %}
 
- <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
 
-                <div class="card shadow-lg p-4" style="border:1px solid lightgrey; border-radius:10px;">
-                    <h3 class="text-center mb-4" style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Edit Student</h3>
+            <div class="card shadow-lg p-4" style="border:1px solid lightgrey; border-radius:10px;">
+                <h3 class="text-center mb-4"
+                    style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Edit Student</h3>
 
-                    <form method="POST" enctype="multipart/form-data" action="{% url 'updatestudent' s_id=student.id %}">
-                        {% csrf_token %}
+                <form method="POST" enctype="multipart/form-data" action="{% url 'updatestudent' s_id=student.id %}">
+                    {% csrf_token %}
 
-                        <div class="mb-3">
-                            <label class="form-label">Student Name</label>
-                            <input type="text" placeholder="Student Name" name="student_name" class="form-control" value="{{student.Student_name}}">
-                        </div>
+                    <div class="mb-3">
+                        <label class="form-label">Student Name</label>
+                        <input type="text" placeholder="Student Name" name="student_name" class="form-control"
+                               value="{{student.Student_name}}">
+                    </div>
 
-                        <div class="mb-3">
-                            <label class="form-label">Roll Number</label>
-                            <input type="text" placeholder="Roll Number" name="student_rollno" class="form-control" value="{{student.Student_rollno}}">
+                    <div class="mb-3">
+                        <label class="form-label">Roll Number</label>
+                        <input type="text" placeholder="Roll Number" name="student_rollno" class="form-control"
+                               value="{{student.Student_rollno}}">
 
-                        </div>
+                    </div>
 
-                        <div class="mb-3">
-                            <label class="form-label">Register Number</label>
-                            <input type="text" placeholder="Register Number" name="student_regid" class="form-control" value="{{student.Student_regid}}">
+                    <div class="mb-3">
+                        <label class="form-label">Register Number</label>
+                        <input type="text" placeholder="Register Number" name="student_regid" class="form-control"
+                               value="{{student.Student_regid}}">
 
-                        </div>
+                    </div>
 
-                        <div class="mb-3">
-                                <label class="form-label">Batch</label>
-                                <select name="student_batch" class="form-control">
-                                    <option >{{student.Student_batch}}</option>
-                                    <option >CSE</option>
-                                    <option >EC</option>
-                                    <option >EEE</option>
-                                    <option >CE</option>
-                                </select>
-                        </div>
+                    <div class="mb-3">
+                        <label class="form-label">Batch</label>
+                        <select name="student_batch" class="form-control">
+                            <option>{{student.Student_batch}}</option>
+                            <option>CSE</option>
+                            <option>EC</option>
+                            <option>EEE</option>
+                            <option>CE</option>
+                        </select>
+                    </div>
 
-                        <div class="mb-3">
-                <label class="form-label">Semester</label>
-                <select name="student_sem" class="form-control">
-                    <option >{{student.Student_sem}}</option>
-                    <option >S1</option>
-                    <option >S2</option>
-                    <option >S3</option>
-                    <option >S4</option>
-                    <option >S5</option>
-                    <option >S6</option>
-                </select>
-            </div>
+                    <div class="mb-3">
+                        <label class="form-label">Semester</label>
+                        <select name="student_sem" class="form-control">
+                            <option>{{student.Student_sem}}</option>
+                            <option>S1</option>
+                            <option>S2</option>
+                            <option>S3</option>
+                            <option>S4</option>
+                            <option>S5</option>
+                            <option>S6</option>
+                        </select>
+                    </div>
 
-                        <div class="mb-3">
-                            <label class="form-label">Duration</label>
-                            <input type="text" placeholder="Duration" name="student_duration" class="form-control" value="{{student.Student_duration}}">
-                        </div>
+                    <div class="mb-3">
+                        <label class="form-label">Duration</label>
+                        <input type="text" placeholder="Duration" name="student_duration" class="form-control"
+                               value="{{student.Student_duration}}">
+                    </div>
 
-                        <div class="mb-3">
-                            <label class="form-label">Mobile Number</label>
-                            <input type="tel" minlength="10" maxlength="10" pattern="[0-9]{10}" placeholder="Mobile Number" name="student_phone" class="form-control" value="{{student.Student_phone}}">
-                        </div>
+                    <div class="mb-3">
+                        <label class="form-label">Mobile Number</label>
+                        <input type="tel" minlength="10" maxlength="10" pattern="[0-9]{10}" placeholder="Mobile Number"
+                               name="student_phone" class="form-control" value="{{student.Student_phone}}">
+                    </div>
 
-                        <div class="mb-3">
-                            <label class="form-label">Password</label>
-                            <input type="text"  placeholder="Password" name="student_password" class="form-control" value="{{student.Student_password}}">
-                        </div>
+                    <div class="mb-3">
+                        <label class="form-label">Password</label>
+                        <input type="text" placeholder="Password" name="student_password" class="form-control"
+                               value="{{student.Student_password}}">
+                    </div>
 
-                        <div class="mb-3">
-                            <img src="{{student.Student_prof.url}}" height="150px" width="150px" >
-                            <label class="form-label">Profile Image</label>
-                            <input type="file" placeholder="Upload Your Profile Image" name="student_prof" class="form-control">
-                        </div>
+                    <div class="mb-3">
+                        <img src="{{student.Student_prof.url}}" height="150px" width="150px">
+                        <label class="form-label">Profile Image</label>
+                        <input type="file" placeholder="Upload Your Profile Image" name="student_prof"
+                               class="form-control">
+                    </div>
 
-                        <div class="text-center">
+                    <div class="text-center">
                         <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
                             Update Student
                         </button>
-                        </div>
-                    </form>
-                </div>
-
+                    </div>
+                </form>
             </div>
+
         </div>
     </div>
+</div>
 
 
 {% endblock %}
