--- a/TeacherApp/templates/editsubject.html
+++ b/TeacherApp/templates/editsubject.html
@@ -5,54 +5,58 @@
 <div class="col-md-6">
 
     <div class="card shadow-lg p-4">
-        <h3 class="text-center mb-4" style="color:darkblue; font-weight:bold; font-size:30px; font-family:Arial;">Edit Subject</h3>
+        <h3 class="text-center mb-4" style="color:darkblue; font-weight:bold; font-size:30px; font-family:Arial;">Edit
+            Subject</h3>
 
         <form method="POST" action="{% url 'Updatesubject' sub_id=subject.id %}">
             {% csrf_token %}
 
             <div class="mb-3">
                 <label class="form-label">Subject Name</label>
-                <input type="text" name="subject_name" placeholder="Enter Subject Name" class="form-control" value="{{subject.Subject_name}}">
+                <input type="text" name="subject_name" placeholder="Enter Subject Name" class="form-control"
+                       value="{{subject.Subject_name}}">
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Subject Code</label>
-                <input type="text" name="subject_code" placeholder="Ex: CS401" class="form-control" value="{{subject.Subject_code}}">
+                <input type="text" name="subject_code" placeholder="Ex: CS401" class="form-control"
+                       value="{{subject.Subject_code}}">
             </div>
 
-             <div class="mb-3">
+            <div class="mb-3">
                 <label class="form-label">Teacher</label>
-                <input type="text" name="subject_teacher" placeholder="Teacher" class="form-control" value="{{subject.Subject_teacher}}">
+                <input type="text" name="subject_teacher" placeholder="Teacher" class="form-control"
+                       value="{{subject.Subject_teacher}}">
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Semester</label>
                 <select name="subject_sem" class="form-control">
-                    <option >{{subject.Subject_sem}}</option>
-                    <option >S1</option>
-                    <option >S2</option>
-                    <option >S3</option>
-                    <option >S4</option>
-                    <option >S5</option>
-                    <option >S6</option>
+                    <option>{{subject.Subject_sem}}</option>
+                    <option>S1</option>
+                    <option>S2</option>
+                    <option>S3</option>
+                    <option>S4</option>
+                    <option>S5</option>
+                    <option>S6</option>
                 </select>
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Department</label>
                 <select name="subject_dep" class="form-control">
-                    <option >{{subject.Subject_dep}}</option>
-                    <option >CSE</option>
-                    <option >EC</option>
-                    <option >EEE</option>
-                    <option >CE</option>
+                    <option>{{subject.Subject_dep}}</option>
+                    <option>CSE</option>
+                    <option>EC</option>
+                    <option>EEE</option>
+                    <option>CE</option>
                 </select>
             </div>
 
             <div class="text-center">
-            <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
-                Update Subject
-            </button>
+                <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
+                    Update Subject
+                </button>
             </div>
 
 
@@ -60,7 +64,6 @@
     </div>
 
 </div>
-
 
 
 {% endblock %}
