--- a/StudentApp/templates/StudentLoginPage.html
+++ b/StudentApp/templates/StudentLoginPage.html
@@ -44,17 +44,19 @@
                             <!-- REGISTRATION ID -->
                             <div class="form-group first">
                                 <label>Registration ID</label>
-                                <input type="text" class="form-control" name="regid" placeholder="Enter your Registration ID" required>
+                                <input type="text" class="form-control" name="regid"
+                                       placeholder="Enter your Registration ID" required>
                             </div>
 
                             <!-- PASSWORD -->
                             <div class="form-group mb-4">
-                                <label >Password</label>
-                                <input type="password" class="form-control" name="password" placeholder="Enter your Password" required>
+                                <label>Password</label>
+                                <input type="password" class="form-control" name="password"
+                                       placeholder="Enter your Password" required>
                             </div>
 
                             <!-- LOGIN BUTTON -->
-                            <input type="submit"  class="btn btn-block btn-primary">
+                            <input type="submit" class="btn btn-block btn-primary">
 
                         </form>
 
