commit 40 (set action in loginpage)

--- a/StudentApp/templates/StudentLoginPage.html
+++ b/StudentApp/templates/StudentLoginPage.html
@@ -38,7 +38,7 @@
                             <h3>Student Login</h3>
                         </div>
 
-                        <form action="" method="post">
+                        <form action="{% url 'StudentLogin' %}" method="post">
                             {% csrf_token %}
 
                             <!-- REGISTRATION ID -->
